src/app/components/organisms/hero-section/heroSection.module.css
.heroSectionContainer {
    display: flex;
    width: 100%;
    height: 660px;

    background-color: hsl(0, 0%, 98%);
    background-image: url('../../../../../public/images/bg-intro-desktop.svg');
    background-repeat: no-repeat;
    background-position-x: 655px;
    background-position-y: -264px;
    /* background-size: 100%; */
}

.heroSecHeader {
    font-size: 56px;
    font-weight: 300;
}

.heroSecSubtitle {
    margin: 40px auto;
    color: hsl(233, 8%, 62%);
    font-size: 20px;
}

.heroBackground {
    z-index: 1;
    align-self: center;
    display: flex;
    position: absolute;
}

.leftHeroContainer, .rightHeroContainer {
    height: 100%;
    width: 50%;

    z-index: 2;
}

.rightHeroContainer {
    overflow-x: clip;
}

.leftHeroContainer {
    display: flex;
}

.mockupOverlay {
    position: relative;
    top: -127.5px;
    right: -120px;
}

.lfhSubject {
    display: flex;
    height: 75%;
    width: 75%;

    margin: auto;
    z-index: 2;
}

.lfhSubItem {
    margin: auto 15px;
    padding-left: 5px;
}

